--- a/client/views/index.html
+++ b/client/views/index.html
@@ -4,15 +4,12 @@
     <meta name="viewport"
           content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0, width=device-width">
 </head>
-
 <body>
-
-
 {{>header}}
-
 <div class="container">
-    {{>question}}
+    <div class="row">
+        <div class="col-md-7">{{>question}}</div>
+        <div class="col-md-5"></div>
+    </div>
 </div>
-
 </body>
-
