--- a/client/views/index.html
+++ b/client/views/index.html
@@ -7,9 +7,10 @@
 <body>
 {{>header}}
 <div class="container">
+    <div class="alert alert-danger">WIP</div>
     <div class="row">
         <div class="col-md-7">{{>question}}</div>
-        <div class="col-md-5"></div>
+        <div class="col-md-5">{{>user}}</div>
     </div>
 </div>
 </body>
