--- a/client/views/Quiz/User/user.html
+++ b/client/views/Quiz/User/user.html
@@ -1,14 +1,12 @@
 <template name="user">
-    {{#if isGuest}}
+    Hello, {{#if isGuest }} GUEST {{else}} {{userName}}{{/if}} <br>
+    Points: <strong>{{userPoints}}</strong>
+    <hr>
+    {{#if isGuest }}
         <div class="form-inline">
             <label style="display:block" for="username">Set Username</label>
             <input type="text" class="form-control" id="username" placeholder="Username">
             <button class="btn btn-info setUsername">Set</button>
         </div>
-
-    {{else}}
-        Hello, {{userName}} <br>
-        Points: {{userPoints}}
-
-    {{/if }}
+    {{/if}}
 </template>
